# ChangeLog for dev-ruby/flay
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*flay-2.4.0 (26 Jul 2013)

  26 Jul 2013; Hans de Graaff <graaff@gentoo.org> +flay-2.4.0.ebuild:
  Version bump.

*flay-2.3.0 (21 Jun 2013)

  21 Jun 2013; Hans de Graaff <graaff@gentoo.org> +flay-2.3.0.ebuild:
  Version bump.

  16 Aug 2012; Hans de Graaff <graaff@gentoo.org> flay-1.4.3.ebuild:
  Update dependency for package move.

  08 Nov 2011; Hans de Graaff <graaff@gentoo.org> flay-1.4.3.ebuild:
  Fix dependencies to match gemspec and support newer versions of ruby_parser.

  08 Nov 2011; Hans de Graaff <graaff@gentoo.org> -flay-1.4.2.ebuild:
  Remove old version.

*flay-1.4.3 (12 Aug 2011)

  12 Aug 2011; Hans de Graaff <graaff@gentoo.org> +flay-1.4.3.ebuild:
  Version bump.

  14 Jun 2011; Hans de Graaff <graaff@gentoo.org> flay-1.4.2.ebuild:
  Add x86 keyword.

  14 Jun 2011; Hans de Graaff <graaff@gentoo.org> -flay-1.4.0-r1.ebuild,
  -flay-1.4.1.ebuild:
  Remove old versions.

*flay-1.4.2 (07 Mar 2011)

  07 Mar 2011; Hans de Graaff <graaff@gentoo.org> +flay-1.4.2.ebuild:
  Version bump.

*flay-1.4.1 (23 Sep 2010)

  23 Sep 2010; Hans de Graaff <graaff@gentoo.org> +flay-1.4.1.ebuild:
  Version bump.

  05 Aug 2010; Hans de Graaff <graaff@gentoo.org> -flay-1.4.0.ebuild:
  Remove old version.

*flay-1.4.0-r1 (28 Dec 2009)

  28 Dec 2009; Hans de Graaff <graaff@gentoo.org> +flay-1.4.0-r1.ebuild:
  Convert to ruby-fakegem. Specs fail, revisit later. Drop x86 keyword since
  dependencies have not been keyworded yet.

*flay-1.4.0 (05 Nov 2009)

  05 Nov 2009; Hans de Graaff <graaff@gentoo.org> +flay-1.4.0.ebuild,
  +metadata.xml:
  Initial import.
