@@ -1,3 +1,4 @@
 DIST flay-1.4.3.gem 14336 SHA256 87ab619a745b36d023a17b169f13d2df47813964ed68b0cf83c939bc8c86c630 SHA512 4df50994428e38f877b94fb9bc9c74c3419d334324c31d982db435b87d3ade08891056f483a9b9a52c39179f67817a8d9b9f430ecdf5bc9585103ad550ddb9ca WHIRLPOOL c8c046f8dfe4d66afce2b4d583e9808dbf4d7587885cb7cf07f3716f69fc3ae4ec0702a56d10cd9668d70fc7fb571226d63799ca6abc135d2a3bcdf1bb62b51b
 DIST flay-2.3.0.gem 18432 SHA256 9e6af1e47dfab91644e0173e22e5d02c19145898b83a1d4d4a33397f784f4689 SHA512 b931cd1c12360b716296059b9ef7c5ef7a40a1f17225e62e0c0bbb69f6caabee7a6c71fe09c1c257f39398f399b767705f8eca3e36e1686920bce49e03f3d631 WHIRLPOOL 618aa4f750aa69af5d7d5aec1c9d4bb8043aed7def9728014f3fb79838f1b47ccc0f6b8b4390e27d8b63dfb7632bd7973acb7e7a6d59702390a1ad53979dc9cd
 DIST flay-2.4.0.gem 18944 SHA256 d80d8aca88924f28c80379bc8feb46c77691a203030fc73c2ff85028631081c1 SHA512 348afabb072d0bab4129f57fad9910994f15cc3961aacb4282eebfc4e8d387463c0a79957cd594d4868c99e328d2f693fe4602922efef1f491d25b6f54fdaf91 WHIRLPOOL 5cbd7085f86ca8ce9532c513d0570c3101c43145e8976bd07ab49e95d5b2ac82e73ed64d37adaa7b40fe110dd719a5428d47be93240c78636131c5d1d25d488f
+DIST flay-2.5.0.gem 20992 SHA256 b9d21fc6b056fa8bbad23d351962e4c955a1234baff993e43e241b533d40fdc5 SHA512 5118bf6a71d3b7e67981ca1852db79221bc68f8386fed32e6989573d76cc515d078766165e336e708e2b59e4b85963d31243c9b3275b21f0288d5bf7de2a8c36 WHIRLPOOL 6a2c262d649567ca166d07fe20cde7f0c08c986e7bb95fa6bc6630343a10c1408aa071d73f3cd2489330f72f07bbe8f2814982f9451c76ea8482d83e9e9665e2
