@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/flay
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*flay-2.5.0 (15 Aug 2014)
+
+  15 Aug 2014; Hans de Graaff <graaff@gentoo.org> +flay-2.5.0.ebuild:
+  Version bump.
 
 *flay-2.4.0 (26 Jul 2013)
 
